# simple-sklearn-pipeline

./: .gitignore  README.md  housing.ipynb  pyproject.toml
