[tool.poetry]
name = "sklearn-pipeline"
version = "0.1.0"
description = ""
authors = ["apavlidis <apavlidis@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
